--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -16,7 +16,7 @@
     <%= link_to image_tag("logo.png", :alt => "Devil Dog Squadron"), "/" %>
   </div>
   <div class="header-image">
-    <%#= image_tag("headers/" + random_image) %>
+    <%= image_tag("headers/" + random_image) %>
   </div>
 </header>
 
