--- a/app/views/pages/arsenal_of_democracy.html.erb
+++ b/app/views/pages/arsenal_of_democracy.html.erb
@@ -16,7 +16,10 @@
 
 <h1>Aresenal of Democracy Event</h1>
 
-<div style="float:right; margin: 0 0 0.5em 0.5em;border: 1px solid #999; text-align: center; padding: 0.5em;"><%= image_tag "arsenal_of_democracy.png", :width => '250px' %></div>
+<div class="teaser-image">
+  <%= image_tag "arsenal_of_democracy.png" %>
+</div>
+
 <p>There is an historic aviation event taking place in Washington, D.C., May 7-9, 2015, the 70th anniversary of Victory in Europe (VE Day). The Arsenal of Democracy World War II Victory Capitol Flyover is hosting a tribute to the men and women at home and abroad that made victory possible, including the contributions of our manufacturing sector that helped win the war.</p>
 
 <p>The Flyover will include 15 historically sequenced warbird formations that travel across our nation’s capital – from the Lincoln Memorial to the Capitol. The Flyover will feature over 70 warbirds representing the major battles of World War II, from Pearl Harbor to D-Day with a final Missing Man Formation to “Taps.” Never before has such a collection of WWII aircraft been assembled at one location, to honor the large group of veterans that will be gathered at the WWII Memorial.</p>
