--- a/app/views/pages/PBJs.html.erb
+++ b/app/views/pages/PBJs.html.erb
@@ -8,52 +8,52 @@
 
 <p>PBJs came about by chance. In 1943, North American, the B-25's manufacturer, produced more B-25s than the Army Air Corp could use. Approximately 800 of the airplanes were offered to the US Navy. Although the famous Doolittle Raid was a successful carrier launched formation of B-25s, the Navy had little use for the extra airplanes. They were too large for regular carrier duty.</p>
 
-<table width="300" class="table_border" align="right">
+<table>
     <tr>
         <th colspan="2">PBJ-1J Specifications:</th>
     </tr>
     <tr> 
-        <td width="84" class="white_row"><strong>Span:</strong></td>
-        <td width="306" class="white_row">67 ft.</td>
+        <td width="84" class="odd-row"><strong>Span:</strong></td>
+        <td width="306" class="odd-row">67 ft.</td>
     </tr>
     <tr> 
-        <td class="yellow_row"><strong>Length:</strong></td>
-        <td class="yellow_row">52 ft. 11 in.</td>
+        <td class="even-row"><strong>Length:</strong></td>
+        <td class="even-row">52 ft. 11 in.</td>
     </tr>
     <tr> 
-        <td class="white_row"><strong>Height:</strong></td>
-        <td class="white_row">15 ft. 9 in.</td>
+        <td class="odd-row"><strong>Height:</strong></td>
+        <td class="odd-row">15 ft. 9 in.</td>
     </tr>
     <tr> 
-        <td class="yellow_row"><strong>Weight:</strong></td>
-        <td class="yellow_row">19,975 lbs. (empty)<br>
+        <td class="even-row"><strong>Weight:</strong></td>
+        <td class="even-row">19,975 lbs. (empty)<br>
         33,500 lbs. (gross)<br>
         36,047 lbs. (maximum)</td>
     </tr>
     <tr> 
-        <td class="white_row"><strong>Speed:</strong></td>
-        <td class="white_row">275 mph (maximum)<br>
+        <td class="odd-row"><strong>Speed:</strong></td>
+        <td class="odd-row">275 mph (maximum)<br>
         230 mph (cruise)<br>
         105 mph (landing)</td>
     </tr>
     <tr> 
-        <td class="yellow_row"><strong>Power:</strong></td>
-        <td class="yellow_row">2 Wright 2600-13 engines<br>
+        <td class="even-row"><strong>Power:</strong></td>
+        <td class="even-row">2 Wright 2600-13 engines<br>
         1,700 hp at take-off</td>
     </tr>
     <tr> 
-        <td class="white_row"><strong>Range:</strong></td>
-        <td class="white_row">1,350 miles</td>
+        <td class="odd-row"><strong>Range:</strong></td>
+        <td class="odd-row">1,350 miles</td>
     </tr>
     <tr> 
-        <td class="yellow_row"><strong>Armament:</strong></td>
-        <td class="yellow_row">16 .50 caliber machine guns<br>
+        <td class="even-row"><strong>Armament:</strong></td>
+        <td class="even-row">16 .50 caliber machine guns<br>
         3,200 lbs of bombs /or<br>
         2,000 lb aerial torpedo</td>
     </tr>
     <tr> 
-        <td class="white_row"><strong>Crew:</strong></td>
-        <td class="white_row">5</td>
+        <td class="odd-row"><strong>Crew:</strong></td>
+        <td class="odd-row">5</td>
     </tr>
 </table>
 
