--- a/app/views/pages/VMB612.html.erb
+++ b/app/views/pages/VMB612.html.erb
@@ -4,14 +4,13 @@
 
 <h1>Devil Dog History</h1>
 
-<table width="150" hspace="10" border="0" align="right" cellpadding="1" cellspacing="1" class="table2">
-    <tr> 
-        <td><img src="/assets/vmb612_3.jpg" width="126" height="102" border="1" /></td>
-    </tr>
-    <tr> 
-        <td><div align="center" class="caption_text">The No 3 ship of VMB-612 - the plane Devil Dog memorializes.<br><i>photo courtesy of George Savini</i></div></td>
-    </tr>
-</table>
+<div class="image-box-right">
+  <%= image_tag "vmb612_3.jpg" %>
+
+  <div class="caption_text">
+    The No 3 ship of VMB-612 - the plane Devil Dog memorializes.<br /><i>photo courtesy of George Savini</i>
+  </div>
+</div>
 
 <p>The Devil Dog is painted to represent ship number three of the VMB-612. It flew 22 missions before being lost.</p>
 
@@ -19,14 +18,12 @@
 
 <p>VMB-612, commanded by Lt. Col. Jack Cram, was selected for special training in night attacks on enemy shipping, using radar to locate and attack the targets. In addition to conventional bombs and torpedoes, the new 5-inch HVAR rockets were tried and found to be highly accurate and effective. By flying level about 300 feet above the water and correcting for wind and temperature variations, Cram's pilots learned to judge the rockets range. In one practice attack on a small island only 200 feet long by 100 feet wide, the squadron fired over 250 HVARs and scored 56 percent hits. </p>
 
-<table width="200" hspace="10" border="0" align="left" cellpadding="1" cellspacing="1" class="table2">
-    <tr> 
-        <td><img src="/assets/tinytim1.jpg" width="194" height="148" border="1" /></td>
-    </tr>
-    <tr> 
-        <td><div align="center" class="caption_text">VMB 612 with TinyTim rocket<br><i>photo courtesy of NARA</i></div></td>
-    </tr>
-</table>
+<div class="image-box-left">
+  <%= image_tag "tinytim1.jpg" %>
+  <div class="caption_text">
+    VMB 612 with TinyTim rocket<br><i>photo courtesy of NARA</i>
+  </div>
+</div>
 
 <p align="left">In November 1944, VMB-612 was stationed on Saipan, but the nearest shipping targets were near Iwo Jima and Chichi, 630 and 750 miles to the north, respectively. Cram's squadron stripped their PBJs of excess weight, including the upper turrets and cheek guns, and carrying 1520 gallons of fuel, successfully flew missions which lasted 10-12 hours. 
 
