update to add image and fix typo

--- a/app/views/pages/arsenal_of_democracy.html.erb
+++ b/app/views/pages/arsenal_of_democracy.html.erb
@@ -14,7 +14,7 @@
 
 <% end %>
 
-<h1>Aresenal of Demcracy Event</h1>
+<h1>Aresenal of Democracy Event</h1>
 
 <div style="float:right; margin: 0 0 0.5em 0.5em;border: 1px solid #999; text-align: center; padding: 0.5em;"><%= image_tag "arsenal_of_democracy.png", :width => '250px' %></div>
 <p>There is an historic aviation event taking place in Washington, D.C., May 7-9, 2015, the 70th anniversary of Victory in Europe (VE Day). The Arsenal of Democracy World War II Victory Capitol Flyover is hosting a tribute to the men and women at home and abroad that made victory possible, including the contributions of our manufacturing sector that helped win the war.</p>
