--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -6,26 +6,20 @@
 
 
 <% @galleries.each_with_index do |gallery, i| %>
-<% if i == 0 || i % 3 == 0 %>
-  <div class="form_row">
-<% end %>
 
-
-  <div class="photo_cell">
+  <div class="gallery-row">
+  <div class="photo-cell">
     <%= link_to (image_tag 'photos/'+ gallery.gallery_pic), gallery %><br />
     <%= link_to gallery.gallery_name, gallery %><br />
     <%= gallery.description %>
-    <% if session[:current_user] %><br /><%= link_to 'Edit', edit_gallery_path(gallery) %><% end %>
+    <% if session[:current_user] %>
+      <br /><%= link_to 'Edit', edit_gallery_path(gallery) %>
+    <% end %>
   </div>
 
-<% if i > 0 && i == 2 || i == 5 || i == 8 || i == 11 || i == 14 || i == 17 || i == 20 || i == 23 || i == 26 || i == 29 || i == 32 || i == 35 || i == 38 || i == 41 || i == 44 || i == 47 %>
-  <!-- close form_row div -->
-  </div>
-<% elsif i+1 >= @galleries.size %>
   </div>
 <% end %>
 
-<% end %>
 
 
 
