--- a/app/views/members/members_list.html.erb
+++ b/app/views/members/members_list.html.erb
@@ -10,7 +10,7 @@
 
 <h1>Members List - [<%= @members.size %>]</h1> 
 
-<table width="100%">
+<table>
   <tr>
     <th>Name</th>
     <th>Location</th>
