--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 <h1>Listing products</h1>
 
-<table width="560" class="table_border">
+<table class="table_border">
   <tr>
     <th>Item no</th>
     <th>Name</th>
