--- a/app/views/sidebars/_f_18.html.erb
+++ b/app/views/sidebars/_f_18.html.erb
@@ -4,7 +4,8 @@
 
 <p>The B-25, a 'medium-sized bomber', is similar in size to the F-18 'fighter'.</p>
 
-<%= image_tag 'b-25_f-18.png' %>
+<div class="image-center">
+  <%= image_tag 'b-25_f-18.png' %>
+</div>
 
-<!-- Close right-column-box -->
 </div>
