--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -5,24 +5,15 @@
 <p><%= @gallery.description %></p>
 
 <% @gallery.photos.each_with_index do |photo, i| %>
-<% if i == 0 || i % 3 == 0 %>
-  <div class="form_row">
-<% end %>
 
-
-  <div class="photo_cell">
-    <%= link_to (image_tag 'photos/'+ photo.path + '/thumbs/' + photo.filename), photo_path(photo) %><br />
-    <%= photo.description %>
-  </div>
-
-<% if i > 0 && i == 2 || i == 5 || i == 8 || i == 11 || i == 14 || i == 17 || i == 20 || i == 23 || i == 26 || i == 29 || i == 32 || i == 35 || i == 38 || i == 41 || i == 44 || i == 47 %>
-  <!-- close form_row div -->
-  </div>
-<% elsif i+1 >= @gallery.photos.size %>
+  <div class="gallery-row">
+    <div class="photo-cell">
+      <%= link_to (image_tag 'photos/'+ photo.path + '/' + photo.filename), photo_path(photo) %><br />
+      <%= photo.description %>
+    </div>
   </div>
 <% end %>
 
-<% end %>
 
 <% if session[:current_user] %>
 <%= link_to 'Edit', edit_gallery_path(@gallery) %> |
