--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -12,20 +12,16 @@
 <div id="container">
 
 <header>
-  <div class="logo">
-    <%= link_to image_tag("logo.png", :alt => "Devil Dog Squadron"), "/" %>
-  </div>
-  <div class="header-image">
-    <%= image_tag("headers/" + random_image) %>
-  </div>
+  <%= render 'layouts/header' %>
 </header>
 
-<nav id="top-nav">
-    <%#= render 'layouts/nav' %>
+
+<nav>
+    <%= render 'layouts/nav' %>
 </nav>
 
 
-<div id="main">
+<div class="main">
   <%= yield %>
 </div>
 
