--- a/app/views/videos/video_gallery.html.erb
+++ b/app/views/videos/video_gallery.html.erb
@@ -1,29 +1,14 @@
 <h1>Video Gallery</h1>
 
-
-
-
-
 <% @videos.each_with_index do |video, i| %>
-<% if i == 0 || i % 3 == 0 %>
-  <div class="form_row">
-<% end %>
-
-
-  <div class="photo_cell">
-    <%= link_to (image_tag video.video_graphic), video %>
-    <%= link_to video.title, video %><br />
-    <%= video.date.strftime("%b %d, %Y") %> - <%= video.source %>
-    <% if session[:current_user] %><br /><%= link_to 'Edit', edit_video_path(video) %><% end %>
+  <div class="gallery-row">
+    <div class="photo-cell">
+      <%= link_to (image_tag video.video_graphic), video %>
+      <%= link_to video.title, video %><br />
+      <%= video.date.strftime("%b %d, %Y") %> - <%= video.source %>
+      <% if session[:current_user] %><br /><%= link_to 'Edit', edit_video_path(video) %><% end %>
+    </div>
   </div>
-
-<% if i > 0 && i == 2 || i == 5 || i == 8 || i == 11 || i == 14 || i == 17 || i == 20 || i == 23 || i == 26 || i == 29 || i == 32 || i == 35 || i == 38 || i == 41 || i == 44 || i == 47 %>
-  <!-- close form_row div -->
-  </div>
-<% elsif i+1 >= @videos.size %>
-  </div>
-<% end %>
-
 <% end %>
 
 <br />
